gen/PamParser.py
# Generated from C:/Users/pauli/Documents/uni/6_sem/pvsus/md02/pam-interpreter-antlr\Pam.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PamParser ( Parser ):

    grammarFileName = "Pam.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'read'", "'write'", "':='", "'if'", 
                     "'then'", "'else'", "'fi'", "'while'", "'do'", "'end'", 
                     "'('", "')'", "','", "<INVALID>", "'and'", "'or'", 
                     "'not'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "BOOL", "CONJ", 
                      "DISJ", "NEG", "NEWLINE", "WEAKOP", "STRONGOP", "RELATION", 
                      "NUMBER", "VARNAME", "WS" ]

    RULE_progr = 0
    RULE_series = 1
    RULE_stmt = 2
    RULE_input_stmt = 3
    RULE_output_stmt = 4
    RULE_assign_stmt = 5
    RULE_cond_stmt = 6
    RULE_loop = 7
    RULE_logical_expr = 8
    RULE_logical_term = 9
    RULE_logical_neg_elem = 10
    RULE_logical_elem = 11
    RULE_compar = 12
    RULE_varlist = 13
    RULE_expr = 14
    RULE_term = 15
    RULE_elem = 16

    ruleNames =  [ "progr", "series", "stmt", "input_stmt", "output_stmt", 
                   "assign_stmt", "cond_stmt", "loop", "logical_expr", "logical_term", 
                   "logical_neg_elem", "logical_elem", "compar", "varlist", 
                   "expr", "term", "elem" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    BOOL=15
    CONJ=16
    DISJ=17
    NEG=18
    NEWLINE=19
    WEAKOP=20
    STRONGOP=21
    RELATION=22
    NUMBER=23
    VARNAME=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def series(self):
            return self.getTypedRuleContext(PamParser.SeriesContext,0)


        def NEWLINE(self):
            return self.getToken(PamParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PamParser.RULE_progr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgr" ):
                listener.enterProgr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgr" ):
                listener.exitProgr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgr" ):
                return visitor.visitProgr(self)
            else:
                return visitor.visitChildren(self)




    def progr(self):

        localctx = PamParser.ProgrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_progr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.series()
            self.state = 35
            self.match(PamParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeriesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PamParser.StmtContext)
            else:
                return self.getTypedRuleContext(PamParser.StmtContext,i)


        def getRuleIndex(self):
            return PamParser.RULE_series

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeries" ):
                listener.enterSeries(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeries" ):
                listener.exitSeries(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeries" ):
                return visitor.visitSeries(self)
            else:
                return visitor.visitChildren(self)




    def series(self):

        localctx = PamParser.SeriesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_series)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.stmt()
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PamParser.T__0:
                self.state = 38
                self.match(PamParser.T__0)
                self.state = 39
                self.stmt()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def input_stmt(self):
            return self.getTypedRuleContext(PamParser.Input_stmtContext,0)


        def output_stmt(self):
            return self.getTypedRuleContext(PamParser.Output_stmtContext,0)


        def assign_stmt(self):
            return self.getTypedRuleContext(PamParser.Assign_stmtContext,0)


        def cond_stmt(self):
            return self.getTypedRuleContext(PamParser.Cond_stmtContext,0)


        def loop(self):
            return self.getTypedRuleContext(PamParser.LoopContext,0)


        def getRuleIndex(self):
            return PamParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = PamParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PamParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.input_stmt()
                pass
            elif token in [PamParser.T__2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.output_stmt()
                pass
            elif token in [PamParser.VARNAME]:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.assign_stmt()
                pass
            elif token in [PamParser.T__4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.cond_stmt()
                pass
            elif token in [PamParser.T__8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 49
                self.loop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(PamParser.VarlistContext,0)


        def getRuleIndex(self):
            return PamParser.RULE_input_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput_stmt" ):
                listener.enterInput_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput_stmt" ):
                listener.exitInput_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput_stmt" ):
                return visitor.visitInput_stmt(self)
            else:
                return visitor.visitChildren(self)




    def input_stmt(self):

        localctx = PamParser.Input_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_input_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(PamParser.T__1)
            self.state = 53
            self.varlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Output_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(PamParser.VarlistContext,0)


        def getRuleIndex(self):
            return PamParser.RULE_output_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput_stmt" ):
                listener.enterOutput_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput_stmt" ):
                listener.exitOutput_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutput_stmt" ):
                return visitor.visitOutput_stmt(self)
            else:
                return visitor.visitChildren(self)




    def output_stmt(self):

        localctx = PamParser.Output_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_output_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(PamParser.T__2)
            self.state = 56
            self.varlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(PamParser.VARNAME, 0)

        def expr(self):
            return self.getTypedRuleContext(PamParser.ExprContext,0)


        def logical_expr(self):
            return self.getTypedRuleContext(PamParser.Logical_exprContext,0)


        def getRuleIndex(self):
            return PamParser.RULE_assign_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_stmt" ):
                listener.enterAssign_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_stmt" ):
                listener.exitAssign_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stmt" ):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = PamParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(PamParser.VARNAME)
            self.state = 59
            self.match(PamParser.T__3)
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 60
                self.expr()
                pass

            elif la_ == 2:
                self.state = 61
                self.logical_expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def series(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PamParser.SeriesContext)
            else:
                return self.getTypedRuleContext(PamParser.SeriesContext,i)


        def logical_expr(self):
            return self.getTypedRuleContext(PamParser.Logical_exprContext,0)


        def getRuleIndex(self):
            return PamParser.RULE_cond_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond_stmt" ):
                listener.enterCond_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond_stmt" ):
                listener.exitCond_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond_stmt" ):
                return visitor.visitCond_stmt(self)
            else:
                return visitor.visitChildren(self)




    def cond_stmt(self):

        localctx = PamParser.Cond_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cond_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(PamParser.T__4)

            self.state = 65
            self.logical_expr(0)
            self.state = 66
            self.match(PamParser.T__5)
            self.state = 67
            self.series()
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PamParser.T__6:
                self.state = 68
                self.match(PamParser.T__6)
                self.state = 69
                self.series()


            self.state = 72
            self.match(PamParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def series(self):
            return self.getTypedRuleContext(PamParser.SeriesContext,0)


        def logical_expr(self):
            return self.getTypedRuleContext(PamParser.Logical_exprContext,0)


        def getRuleIndex(self):
            return PamParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = PamParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(PamParser.T__8)

            self.state = 75
            self.logical_expr(0)
            self.state = 76
            self.match(PamParser.T__9)
            self.state = 77
            self.series()
            self.state = 78
            self.match(PamParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_term(self):
            return self.getTypedRuleContext(PamParser.Logical_termContext,0)


        def logical_expr(self):
            return self.getTypedRuleContext(PamParser.Logical_exprContext,0)


        def DISJ(self):
            return self.getToken(PamParser.DISJ, 0)

        def getRuleIndex(self):
            return PamParser.RULE_logical_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_expr" ):
                listener.enterLogical_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_expr" ):
                listener.exitLogical_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_expr" ):
                return visitor.visitLogical_expr(self)
            else:
                return visitor.visitChildren(self)



    def logical_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PamParser.Logical_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_logical_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.logical_term(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PamParser.Logical_exprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logical_expr)
                    self.state = 83
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 84
                    self.match(PamParser.DISJ)
                    self.state = 85
                    self.logical_term(0) 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Logical_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_neg_elem(self):
            return self.getTypedRuleContext(PamParser.Logical_neg_elemContext,0)


        def logical_term(self):
            return self.getTypedRuleContext(PamParser.Logical_termContext,0)


        def CONJ(self):
            return self.getToken(PamParser.CONJ, 0)

        def getRuleIndex(self):
            return PamParser.RULE_logical_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_term" ):
                listener.enterLogical_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_term" ):
                listener.exitLogical_term(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_term" ):
                return visitor.visitLogical_term(self)
            else:
                return visitor.visitChildren(self)



    def logical_term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PamParser.Logical_termContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_logical_term, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.logical_neg_elem()
            self._ctx.stop = self._input.LT(-1)
            self.state = 99
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PamParser.Logical_termContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logical_term)
                    self.state = 94
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 95
                    self.match(PamParser.CONJ)
                    self.state = 96
                    self.logical_neg_elem() 
                self.state = 101
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Logical_neg_elemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEG(self):
            return self.getToken(PamParser.NEG, 0)

        def logical_elem(self):
            return self.getTypedRuleContext(PamParser.Logical_elemContext,0)


        def getRuleIndex(self):
            return PamParser.RULE_logical_neg_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_neg_elem" ):
                listener.enterLogical_neg_elem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_neg_elem" ):
                listener.exitLogical_neg_elem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_neg_elem" ):
                return visitor.visitLogical_neg_elem(self)
            else:
                return visitor.visitChildren(self)




    def logical_neg_elem(self):

        localctx = PamParser.Logical_neg_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_logical_neg_elem)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PamParser.NEG]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(PamParser.NEG)
                self.state = 103
                self.logical_elem()
                pass
            elif token in [PamParser.T__11, PamParser.BOOL, PamParser.NUMBER, PamParser.VARNAME]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.logical_elem()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_elemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_expr(self):
            return self.getTypedRuleContext(PamParser.Logical_exprContext,0)


        def BOOL(self):
            return self.getToken(PamParser.BOOL, 0)

        def compar(self):
            return self.getTypedRuleContext(PamParser.ComparContext,0)


        def VARNAME(self):
            return self.getToken(PamParser.VARNAME, 0)

        def getRuleIndex(self):
            return PamParser.RULE_logical_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_elem" ):
                listener.enterLogical_elem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_elem" ):
                listener.exitLogical_elem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_elem" ):
                return visitor.visitLogical_elem(self)
            else:
                return visitor.visitChildren(self)




    def logical_elem(self):

        localctx = PamParser.Logical_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_logical_elem)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(PamParser.T__11)
                self.state = 108
                self.logical_expr(0)
                self.state = 109
                self.match(PamParser.T__12)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(PamParser.BOOL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.compar()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 113
                self.match(PamParser.VARNAME)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PamParser.ExprContext)
            else:
                return self.getTypedRuleContext(PamParser.ExprContext,i)


        def RELATION(self):
            return self.getToken(PamParser.RELATION, 0)

        def getRuleIndex(self):
            return PamParser.RULE_compar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompar" ):
                listener.enterCompar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompar" ):
                listener.exitCompar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompar" ):
                return visitor.visitCompar(self)
            else:
                return visitor.visitChildren(self)




    def compar(self):

        localctx = PamParser.ComparContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_compar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.expr()
            self.state = 117
            self.match(PamParser.RELATION)
            self.state = 118
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(PamParser.VARNAME)
            else:
                return self.getToken(PamParser.VARNAME, i)

        def getRuleIndex(self):
            return PamParser.RULE_varlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarlist" ):
                listener.enterVarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarlist" ):
                listener.exitVarlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = PamParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(PamParser.VARNAME)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PamParser.T__13:
                self.state = 121
                self.match(PamParser.T__13)
                self.state = 122
                self.match(PamParser.VARNAME)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PamParser.TermContext)
            else:
                return self.getTypedRuleContext(PamParser.TermContext,i)


        def WEAKOP(self, i:int=None):
            if i is None:
                return self.getTokens(PamParser.WEAKOP)
            else:
                return self.getToken(PamParser.WEAKOP, i)

        def getRuleIndex(self):
            return PamParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = PamParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.term()
            self.state = 133
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 129
                    self.match(PamParser.WEAKOP)
                    self.state = 130
                    self.term() 
                self.state = 135
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PamParser.ElemContext)
            else:
                return self.getTypedRuleContext(PamParser.ElemContext,i)


        def STRONGOP(self, i:int=None):
            if i is None:
                return self.getTokens(PamParser.STRONGOP)
            else:
                return self.getToken(PamParser.STRONGOP, i)

        def getRuleIndex(self):
            return PamParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = PamParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_term)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.elem()
            self.state = 141
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 137
                    self.match(PamParser.STRONGOP)
                    self.state = 138
                    self.elem() 
                self.state = 143
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(PamParser.NUMBER, 0)
